--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body, html{
 }
 
 #backgroundNav {
-  background:  black;
+  background: rgb(0, 0, 0) ;
   -webkit-box-shadow: 0 6px 4px -6px black;
   -moz-box-shadow: 0 6px 4px -6px black;
   box-shadow: 0 6px 4px -6px black;
@@ -39,7 +39,8 @@ body, html{
   background-attachment:fixed;
 }
 
-.divBackground {
+.divBackground {  
+ background-color: black;  
  position: relative;
  overflow: hidden;
 }
@@ -47,7 +48,7 @@ body, html{
 .videoBackground {
   object-fit: cover;
   width: 100vw;
-  height: 100vh;
+  height: 80vh;
 }
 
 .pimg1 {
@@ -55,16 +56,28 @@ body, html{
 }
 
 .pimg2{
+  background-size:cover;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px;
-  background-image:url('../img/image2.jpg');
+  background-image:url('../img/brackground2.jpg');
   min-height:400px;
 }
 
+.pimg2 h1 {
+  color:whitesmoke;
+  text-shadow: 2px 4px 3px rgba(0,0,0,0.47);
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: rgba(0, 0, 0, 0.781);
+}
+
+.pimg2 h4{
+  color:rgb(175, 174, 174);
+}
+
 .pimg3{
-  background-image:url('../img/image3.jpg');
+  background-color: black;
   min-height:400px;
 }
 
@@ -78,18 +91,15 @@ body, html{
   color:#666;
 }
 
-.section-dark{
-  background-color:#282e34;
-  color:#ddd;
-}
 
 .ptext{
   position:absolute;
-  top:50%;
+  top:45%;
   width:100%;
   text-align:center;
+  justify-content: center;
   color:#000;
-  font-size:27px;
+  font-size:23px;
   letter-spacing:8px;
   text-transform:uppercase;
 }
@@ -114,18 +124,19 @@ body, html{
   position: relative;
   height: 70%;
   width: 70%;
-  -moz-box-shadow:    3px 3px 3px 1px  rgba(0, 0, 0, 0.4);
-  -webkit-box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, 0.4);
-  box-shadow:         3px 3px 3px 1px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow:    3px 3px 3px 1px  rgba(0, 0, 0, 0.781);
+  -webkit-box-shadow: 3px 3px 3px 1px  rgba(0, 0, 0, 0.781);
+  box-shadow:         3px 3px 3px 1px  rgba(0, 0, 0, 0.781);
 }
 
-.contenedor {
+.cardTextBack {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
-  position: relative;
-  height: 100%;
-  width: 100%;
+  height: 20%;
+  background-color:rgba(0, 0, 0, 0.52);
 }
+
+
+
 
